refactor: reformat, fix IDE warnings